<resources>
    <string name="app_name">轨迹</string>
    <string name="setting_personal_center"> &#160; 个人中心</string>
    <string name="setting_personal_center_title">个人中心</string>
    <string name="setting_tomato"> &#160; 番茄时钟</string>
    <string name="setting_tomato_title">番茄时钟</string>
    <string name="setting_notice_way"> &#160; 通知方式</string>
    <string name="setting_notice_time"> &#160; 默认提醒时间</string>
    <string name="setting_notice_time_title">默认提醒时间</string>
    <string name="notice_way_sound">声音</string>
    <string name="notice_way_shock">震动</string>
    <string name="notice_way_char">聊天</string>
    <string name="notice_way_notice">提醒</string>
    <string name="notice_way_receive">接收新消息</string>
    <string name="notice_way">通知方式</string>
    <string name="setting">设置</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_defult">默认昵称</string>
    <string name="birthday_hint">出生日期</string>
    <string name="birthday_default">1970-01-01</string>
    <string name="sex">性别</string>
    <string name="sex_default">无</string>
    <string name="input_nike">请输入昵称</string>
    <string name="setting_tomato_work_text">25分钟</string>
    <string name="setting_tomato_work_break">10分钟</string>
    <string name="setting_tomato_button">设置屏蔽应用</string>
    <string name="setting_notice_time_remind">提醒</string>
    <string name="notice_time_defult">默认提醒时间</string>
    <string name="setting_notice_time_mission">任务</string>
    <string name="notice_time_mission_before">任务开始前提醒时间</string>
    <string name="notice_time_mission_after">任务结束前提醒时间</string>
    <string name="notice_time_item_text_default">提前10分钟</string>
    <!--首页侧滑栏的条目-->
    <string name="navigation_main">首页</string>
    <string name="navigation_remind">提醒</string>
    <string name="navigation_mission">任务</string>
    <string name="navigation_calendar">日历</string>
    <string name="navigation_tomato">番茄时钟</string>
    <string name="navigation_goal">人生目标</string>
    <string name="navigation_setting">设置</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="tomato_clock_start">开始一个番茄</string>
    <string name="tomato_clock_stop">结束一个番茄</string>
    <string name="tool_bar_title_char">聊天</string>

    <string-array name="char_title">
        <item>聊天列表</item>
        <item>通讯录</item>
    </string-array>

    <string-array name="mission_page_title">
        <item>任务列表</item>
        <item>任务箱</item>
    </string-array>

    <!-- 登录 -->
    <string name="app_login_show">用户名</string>
    <string name="app_login_password">密码</string>
    <string name="app_sign_in">登录</string>
    <string name="app_sign_up">注册</string>
    <string name="app_fogot_password">忘记密码?</string>
    <string name="login_erro_is_null">"用户名、密码不能为空"</string>

    <!--注册-->
    <string name="register_username_hint">请输入用户名</string>
    <string name="register_password_hint">请输入密码</string>

    <string name="char_list_add_friends">添加好友</string>
    <string name="char_list_notice">申请与通知</string>
    <string name="char_list_group_char">群聊</string>

    <string name="add_friends_friend_name">请输入对方名字</string>

    <string name="dialog_add_goal_head">我要在</string>
    <string name="dialog_add_goal_age">岁</string>
    <string name="dialog_add_goal_hint">实现/完成</string>

    <string name="dialog_add_mission_from_hint">任务起始时间</string>
    <string name="dialog_add_mission_from_time">2015-9-10 2:00</string>
    <string name="dialog_add_mission_to_hint">任务结束时间</string>
    <string name="dialog_add_mission_to_time">2015-10-10 2:00</string>
    <string name="dialog_add_mission_hint">任务名称</string>

</resources>
