<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_dialog_add_mission_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_mission_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_mission_from_hint" />

    <TextView
        android:id="@+id/tv_dialog_add_mission_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_mission_from_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_mission_to_hint" />

    <TextView
        android:id="@+id/tv_dialog_add_mission_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_mission_to_time" />

</LinearLayout>