<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_char_list_add_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/char_list_add_friends" />

        <TextView
            android:id="@+id/tv_char_list_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/char_list_notice" />

        <TextView
            android:id="@+id/tv_char_list_group_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/char_list_group_char" />

    </LinearLayout>
</LinearLayout>