<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_goal_head" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_dialog_add_goal_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_goal_age" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_dialog_add_goal_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_goal_hint" />

</LinearLayout>