<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

   <android.support.v7.widget.CardView
       style="@style/settingCardView"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:id="@+id/tv_setting_personal_center"
               style="@style/SettingItemTextView"
               android:text="@string/setting_personal_center"
               android:drawableLeft="@mipmap/ic_setting_person_center"/>
           <Button
               style="@style/Line"
               />
           <TextView
               android:id="@+id/tv_setting_tomato"
               style="@style/SettingItemTextView"
               android:text="@string/setting_tomato"
               android:drawableLeft="@mipmap/ic_setting_tomato"/>

           <Button
               style="@style/Line"
               />
           <TextView
               android:id="@+id/tv_setting_notice_way"
               style="@style/SettingItemTextView"
               android:text="@string/setting_notice_way"
               android:drawableLeft="@mipmap/ic_setting_notice_way"
               />
           <Button
               style="@style/Line"
               />
           <TextView
               android:id="@+id/tv_setting_notice_time"
               style="@style/SettingItemTextView"
               android:text="@string/setting_notice_time"
               android:drawableLeft="@mipmap/ic_setting_notice_time"
               />

       </LinearLayout>

   </android.support.v7.widget.CardView>
<ProgressBar
    android:id="@+id/iv_setting_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:indeterminateDrawable="@anim/setting_background"
    android:padding="@dimen/dp_40"/>

</LinearLayout>