<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/org.angmarch.views"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_default" />

    <android.support.v7.widget.CardView style="@style/settingCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_main_head"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_main_head_default"
                app:border_color="#263238"
                app:border_width="2dp" />

            <LinearLayout
                android:id="@+id/ll_setting_nick_name"
                style="@style/setting_personal_center_linelayout"

                >

                <TextView
                    style="@style/setting_personal_center_text_left"
                    android:text="@string/nick_name" />

                <TextView
                    style="@style/setting_personal_center_text_right"
                    android:text="@string/nick_name_defult" />
            </LinearLayout>

            <Button style="@style/Line" />

            <LinearLayout
                android:id="@+id/ll_setting_birth"
                style="@style/setting_personal_center_linelayout">

                <TextView
                    style="@style/setting_personal_center_text_left"
                    android:text="@string/birthday_hint" />

                <TextView
                    android:id="@+id/tv_setting_personal_center_nick"
                    style="@style/setting_personal_center_text_right"
                    android:text="@string/birthday_default" />
            </LinearLayout>

            <Button style="@style/Line" />

            <LinearLayout
                android:id="@+id/ll_setting_sex"
                style="@style/setting_personal_center_linelayout"

                >

                <TextView
                    style="@style/setting_personal_center_text_left"
                    android:text="@string/sex" />

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/tv_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"
                    android:backgroundTint="#00FFFFFF"

                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>