<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/app_login_show"
                android:singleLine="true"
                android:textColor="@color/main_regist"
                android:textColorHint="@color/main_regist" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dip">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/app_login_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/main_regist"
                android:textColorHint="@color/main_regist" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="24dip"
            android:background="@drawable/de_login_selector"
            android:text="@string/app_sign_in"
            android:textColor="@color/main_regist"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_login_forgot"
            style="@style/DemoTextStyleMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="11dp"
            android:text="@string/app_fogot_password" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_register"
        style="@style/DemoTextStyleMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/app_sign_up" />
</RelativeLayout>

