<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView style="@style/settingCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/setting_notice_way_subtitle_tv"
                android:text="@string/setting_notice_time_remind" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_15">

                <TextView
                    android:id="@+id/tv_notice_time_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_next"
                    android:text="@string/notice_time_defult" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_notice_time_remind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!--通知时间-->
    <android.support.v7.widget.CardView style="@style/settingCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/setting_notice_way_subtitle_tv"
                android:text="@string/setting_notice_time_mission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_15">

                <TextView
                    android:id="@+id/tv_mission_before_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_next"
                    android:text="@string/notice_time_mission_before" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_notice_time_mission_before"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_mission_after_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_next"
                    android:text="@string/notice_time_mission_after"
                    android:layout_marginTop="@dimen/dp_15"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_notice_time_mission_after"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>