<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_setting_notice_time"
        style="@style/toolBar"
         />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView style="@style/settingCardView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/setting_notice_way_subtitle_tv"
                android:text="@string/setting_notice_time_remind" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_10">

                <TextView
                    android:id="@+id/tv_remind_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_next"
                    android:text="@string/notice_time_defult" />
                <TextView
                    android:id="@+id/tv_remind_time_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_time_item_text_default"/>
                <com.gc.materialdesign.views.Slider
                    android:id="@+id/slider_remind"
                    style="@style/setting_tomato_slider"
                    android:background="@color/setting_tomato_slider"
                    materialdesign:max="60"
                    materialdesign:min="0"
                    materialdesign:showNumberIndicator="true" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!--通知时间-->
    <android.support.v7.widget.CardView style="@style/settingCardView"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10">

            <TextView
                style="@style/setting_notice_way_subtitle_tv"
                android:text="@string/setting_notice_time_mission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_15">

                <TextView
                    android:id="@+id/tv_mission_before_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_next"
                    android:text="@string/notice_time_mission_before" />
                <TextView
                    android:id="@+id/tv_mission_before_time_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_time_item_text_default"/>

                <com.gc.materialdesign.views.Slider
                    android:id="@+id/slider_missiom_before"
                    style="@style/setting_tomato_slider"
                    android:background="@color/setting_tomato_slider"
                    materialdesign:max="60"
                    materialdesign:min="0"
                    materialdesign:showNumberIndicator="true" />
                <TextView
                    android:id="@+id/tv_mission_after_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/ic_next"
                    android:text="@string/notice_time_mission_after"
                    android:layout_marginTop="@dimen/dp_15"/>
                <TextView
                    android:id="@+id/tv_mission_after_time_deault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_time_item_text_default"/>
                <com.gc.materialdesign.views.Slider
                    android:id="@+id/slider_missiom_after"
                    style="@style/setting_tomato_slider"
                    android:background="@color/setting_tomato_slider"
                    materialdesign:max="60"
                    materialdesign:min="0"
                    materialdesign:showNumberIndicator="true" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</LinearLayout>