<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_30"
        android:paddingRight="@dimen/dp_30">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username_hint"
                android:singleLine="true"
                android:textColor="@color/main_regist"
                android:textColorHint="@color/main_regist" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dip">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/main_regist"
                android:textColorHint="@color/main_regist" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="24dip"
            android:background="@drawable/de_login_selector"
            android:text="@string/app_sign_up"
            android:textColor="@color/main_regist"
            android:textSize="@dimen/sp_18" />


    </LinearLayout>


</RelativeLayout>